Fix button text align .btn.btn-left

--- a/src/assets/scss/_content.scss
+++ b/src/assets/scss/_content.scss
@@ -157,3 +157,6 @@ a.wijet.wijet-h1:hover, a.wijet.wijet-h1:focus {
 #login-container .login-title.text-center img.img-responsive {
   max-height: 3em;
 }
+.btn.btn-left {
+  text-align: left;
+}
